--- a/uurukg/app/templates/all_news.html
+++ b/uurukg/app/templates/all_news.html
@@ -26,23 +26,25 @@
 </div>
 
 
-{% for item in page.object_list %}
-    <!-- Отображение данных -->
-{% endfor %}
+ {% if page.has_previous %}
+        <a href="?page={{page.previous_page_number}}" class="btn btn-secondary mx-2">Previous</a>
+    {% endif %}
 
-<!-- Отображение элементов пагинации -->
-<div class="pagination">
-    <span class="step-links">
-        {% if page.has_previous %}
-            <a href="?page={{ page.previous_page_number }}">previous</a>
+    <a href="?page=1" class="btn btn-secondary">First</a>
+
+    {% for num in news.paginator.page_range %}
+
+        {% if num == page.number %}
+            <span>{{ num }}</span>
+        {% else %}
+            <a href="?page={{num}}" class="btn btn-secondary mx-2">{{ num }}</a>
         {% endif %}
+    {% endfor %}
 
-        <span class="current-page">{{ page.number }}</span>
+    <a href="?page={{page.paginator.num_pages}}" class="btn btn-secondary mx-2">Last</a>
 
-        {% if page.has_next %}
-            <a href="?page={{ page.next_page_number }}">next</a>
-        {% endif %}
-    </span>
-</div>
+    {% if page.has_next %}
+        <a href="?page={{page.next_page_number}}" class="btn btn-secondary mx-2">Next</a>
+    {% endif %}
 
-     {% endblock %}
+{% endblock %}
