--- a/uurukg/app/templates/reporter.html
+++ b/uurukg/app/templates/reporter.html
@@ -3,22 +3,21 @@
 
 {% load static %}
 <h2>Репортер</h2>
+
 <div class="list-group">
     {% for item in news %}
+        <a href="/post/{{item.id}}" class="list-group-item list-group-item-action">
+            <div class="media">
+              <img src="{{ item.image.url }}" class="mr-3" width="200px">
+              <div class="media-body">
+                  <h6 class="mt-0 text-left text-warning">{{ item.departments.title }}</h6>
 
-<a href="/post/{{item.id}}" class="list-group-item list-group-item-action">
-    <div class="media">
-      <img src="{{ item.image.url }}" class="mr-3" alt="Изображение новости 1" width="200px">
-      <div class="media-body">
-          <h6 class="mt-0 text-left text-warning">{{ item.departments.title }}</h6>
-
-        <h4 class="mt-0 text-left">{{ item.title }}</h4>
-        <p class="mb-1">{{ item.description }}</p>
-        <small>{{ item.created_date }}</small>
-      </div>
-    </div>
-  </a>
-
+                <h4 class="mt-0 text-left">{{ item.title }}</h4>
+                <p class="mb-1">{{ item.description }}</p>
+                <small>{{ item.created_date }}</small>
+              </div>
+            </div>
+          </a>
  {% endfor %}
 </div>
 
