--- a/uurukg/app/templates/econom.html
+++ b/uurukg/app/templates/econom.html
@@ -8,6 +8,7 @@
 
 <div class="row text-dark">
        {% for item in news %}
+     <a href="/post/{{item.id}}">
       <div class="col-md-3">
           <div class="card-deck">
         <div class="card">
@@ -24,6 +25,24 @@
     </div>
 
       </div>
+     </a>
      {% endfor %}
 </div>
-     {% endblock %}
+
+
+ {% if page.has_previous %}
+        <a href="?page={{page.previous_page_number}}" class="btn btn-secondary mx-2">Previous</a>
+    {% endif %}
+    <a href="?page=1" class="btn btn-secondary">First</a>
+    {% for num in news.paginator.page_range %}
+        {% if num == page.number %}
+            <span>{{ num }}</span>
+        {% else %}
+            <a href="?page={{num}}" class="btn btn-secondary mx-2">{{ num }}</a>
+        {% endif %}
+    {% endfor %}
+    <a href="?page={{page.paginator.num_pages}}" class="btn btn-secondary mx-2">Last</a>
+    {% if page.has_next %}
+        <a href="?page={{page.next_page_number}}" class="btn btn-secondary mx-2">Next</a>
+    {% endif %}
+{% endblock %}
