--- a/uurukg/app/templates/search_result.html
+++ b/uurukg/app/templates/search_result.html
@@ -9,7 +9,7 @@
 
 
 {% for item in person %}
-<a href="/post/{{item.id}}" class="list-group-item list-group-item-action">
+<a href="/dopinfo/{{item.id}}" class="list-group-item list-group-item-action">
     <div class="media">
       <img src="{{ item.image.url }}" class="mr-3" alt="Изображение новости 1" width="200px">
       <div class="media-body">
