--- a/uurukg/app/templates/base.html
+++ b/uurukg/app/templates/base.html
@@ -51,7 +51,7 @@
         <div class="col-lg-4">
             <a href="/" class="navbar-brand p-0 d-none d-lg-block">
                 <h1 class="m-0 display-4 text-uppercase text-primary">УРУУ<span
-                        class="text-secondary font-weight-normal">KG</span></h1>
+                        class="text-secondary font-weight-normal"><small>.net</small></span></h1>
             </a>
         </div>
         <div class="col-lg-8 text-center text-lg-right">
@@ -67,7 +67,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-0 py-lg-0 px-lg-5">
         <a href="/" class="navbar-brand d-block d-lg-none">
             <h1 class="m-0 display-4 text-uppercase text-primary">УРУУ<span
-                    class="text-white font-weight-normal">.KG</span></h1>
+                    class="text-white font-weight-normal">.net</span></h1>
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -76,24 +76,27 @@
             <div class="navbar-nav mr-auto py-0">
                 <a href="/" class="nav-item nav-link active">Главная</a>
                 <div class="nav-item dropdown">
-                    <a href="/news/all" class="nav-link dropdown-toggle" data-toggle="dropdown">Новости</a>
+                    <a href="/news/all" class="nav-link dropdown-toggle" data-toggle="dropdown">События</a>
                     <div class="dropdown-menu rounded-0 m-0">
                          <a href="/sng/all" class="dropdown-item">Новости СНГ</a>
                         <a href="/economic/all" class="dropdown-item">Экономика</a>
                         <a href="/sport/all" class="dropdown-item">Спорт</a>
                     </div>
                 </div>
-                <div class="nav-item dropdown">
-                    <a href="" class="nav-link dropdown-toggle" data-toggle="dropdown">События</a>
-                    <div class="dropdown-menu rounded-0 m-0">
-                        <a href="/korrupcia/all" class="dropdown-item">Коррупция</a>
-                        <a href="/opg/all" class="dropdown-item">ОПГ</a>
-                        <a href="/criminal/all" class="dropdown-item">Преступления</a>
-                    </div>
-                </div>
-                <a href="/reporter/all" class="nav-item nav-link">Репортер</a>
-                <a href="/analitika/all" class="nav-item nav-link">Аналитика</a>
-                <a href="/release/all/" class="nav-item nav-link">Пресс-релизы</a>
+<!--                <div class="nav-item dropdown">-->
+<!--                    <a href="" class="nav-link dropdown-toggle" data-toggle="dropdown">События</a>-->
+<!--                    <div class="dropdown-menu rounded-0 m-0">-->
+<!--                        <a href="/korrupcia/all" class="dropdown-item">Коррупция</a>-->
+<!--                        <a href="/opg/all" class="dropdown-item">ОПГ</a>-->
+<!--                        <a href="/criminal/all" class="dropdown-item">Преступления</a>-->
+<!--                    </div>-->
+<!--                </div>-->
+                <a href="/korrupcia/all" class="nav-item nav-link">Коррупция</a>
+                <a href="/criminal/all" class="nav-item nav-link">Криминал</a>
+                  <a href="/release/all/" class="nav-item nav-link">Пресс-релизы</a>
+                 <a href="/analitika/all" class="nav-item nav-link">Аналитика</a>
+                <a href="/reporter/all" class="nav-item nav-link">Осведомители</a>
+
             </div>
             <div class="input-group ml-auto d-none d-lg-flex" style="width: 100%; max-width: 300px;">
                 <input type="text" class="form-control border-0" placeholder="Поиск...">
