--- a/uurukg/app/templates/detail.html
+++ b/uurukg/app/templates/detail.html
@@ -2,11 +2,50 @@
 {% block page_content %}
 {% load embed_video_tags %}
 {% load static %}
+
+<div class="pt-4">
 <h2 class="text-center">{{ post.title }}</h2>
 <div class="row mx-5">
    <div class="text-dark"> {{ post.overview | safe }}</div>
-    <img src="{{ post.image.url }}" class="img-fluid rounded-start" style="width: 400px;">
 </div>
 </div>
 
+<div class="py-3">
+
+<!--{% for i in post.newsImage.all %}-->
+<!--<div class="container">-->
+<!--    <div class="row">-->
+<!--        <div class="col-md-4">-->
+<!--            {% if i %}-->
+<!--            <a href="image1.jpg" data-toggle="lightbox" data-gallery="gallery">-->
+<!--                    <img src="{{ i.image.url }}" class="img-fluid rounded-start" style="width: 400px;">-->
+
+<!--            </a>-->
+<!--            {% endif %}-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--{% endfor %}-->
+<!--</div>-->
+
+
+<div class="container">
+    <div class="row">
+        {% for i in post.newsImage.all %}
+        <div class="col-md-4">
+
+            <a href="{{ i.image.url }}" data-toggle="lightbox" data-gallery="gallery">
+                <img src="{{ i.image.url }}" class="img-fluid">
+            </a>
+        </div>
+    {% endfor %}
+    </div>
+</div>
+
+
+
+
 {% endblock %}
+
+
+
