--- a/uurukg/app/templates/index.html
+++ b/uurukg/app/templates/index.html
@@ -10,12 +10,12 @@
         <div class="col-lg-7 px-0">
             <div class="owl-carousel main-carousel position-relative">
                 {% for i in top %}
-                <div class="position-relative overflow-hidden" style="height: 500px;">
+                <div class="position-relative overflow-hidden text-truncate" style="height: 500px;">
                     <!--                    <img class="img-fluid h-100" src="{% static 'img/news-800x500-1.jpg' %}" style="object-fit: cover;">-->
                     <img class="img-fluid h-100" src="{{ i.image.url }}" style="object-fit: cover;">
                     <div class="overlay">
                         <div class="mb-2">
-                            <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2 text-truncate" href="post/{{i.id}}+">{{i.title}}</a>
+                            <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2 text-truncate" href="post/{{i.id}}">{{i.title}}</a>
                             <a class="text-white" href="">{{i.created_date}}</a>
                         </div>
                     </div>
@@ -32,7 +32,7 @@
                     <form action="blog/search/" method="post">
                         {% csrf_token %}
                         <fieldset>
-                            <!--                            <legend>Кого найти?</legend>-->
+
                             <legend>Коррупционеры и ОПГ</legend>
                             <p>Поиск по ФИО:</p>
                             <input type="text" name="name" placeholder="Инициалы..." class="responsive-input"
@@ -54,8 +54,7 @@
                             <div class="col-12">
                                 <div class="section-title">
                                     <h4 class="m-0 text-uppercase font-weight-bold" id="news">Последние новости</h4>
-                                    <a class="text-secondary font-weight-medium text-decoration-none" href="news/all">Смотреть
-                                        все</a>
+                                    <a class="text-secondary font-weight-medium text-decoration-none" href="news/all">Смотреть все</a>
                                 </div>
                             </div>
                             {% for i in posts %}
@@ -200,7 +199,7 @@
                                         <div class="d-flex align-items-center">
                                         </div>
                                         <div class="d-flex align-items-center">
-                                            <a href="post/{{i.id}}">Читать поробнее...</a>
+                                            <a href="/post/{{i.id}}">Читать поробнее...</a>
                                         </div>
                                     </div>
                                 </div>
@@ -243,7 +242,7 @@
                                         <div class="d-flex align-items-center">
                                         </div>
                                         <div class="d-flex align-items-center">
-                                            <a href="post/{{i.id}}">Читать поробнее...</a>
+                                            <a href="sng/{{i.id}}">Читать поробнее...</a>
                                         </div>
                                     </div>
                                 </div>
