--- a/uurukg/app/templates/korrupcia.html
+++ b/uurukg/app/templates/korrupcia.html
@@ -1,29 +1,56 @@
+
+
 {% extends 'base.html' %}
 {% block page_content %}
 
 {% load static %}
-<h2>Коррупция</h2>
+<div class="py-3 ml-2 mr-2 ">
+<h2 class="text-center">Коррупция</h2>
 
 <div class="row text-dark">
        {% for item in news %}
      <a href="/post/{{item.id}}">
-      <div class="col-md-3">
+      <div class="col-md-4">
           <div class="card-deck">
         <div class="card">
               <img src="{{ item.image.url }}" class="card-img-top" alt="...">
-          <a href="">{{ item.category.title }}</a>
+          <a href="#">{{ item.category.title }}</a>
             <div class="card-body">
-                <h5 class="card-title">{{ с.title }}</h5>
+                <a href="/post/{{item.id}}"><h5 class="card-title">{{ item.title }}</h5></a>
                 <p class="card-text">{{ item.description }}</p>
             </div>
              <div class="card-footer">
-      <small class="text-muted"><p class="card-text">{{ item.created_date }}</p></small>
-    </div>
+                 <small class="text-muted">{{ item.created_date }}</small>
+<!--                    <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold" href="/post/{{item.id}}">{{ item.title }}</a>-->
+            </div>
         </div>
     </div>
       </div>
      </a>
-          {% endfor %}
-      </div>
+{% endfor %}
 </div>
-     {% endblock %}
+</div>
+
+{% if page.has_previous %}
+        <a href="?page={{page.previous_page_number}}" class="btn btn-secondary mx-2">Previous</a>
+    {% endif %}
+
+    <a href="?page=1" class="btn btn-secondary">First</a>
+
+    {% for num in news.paginator.page_range %}
+
+        {% if num == page.number %}
+            <span>{{ num }}</span>
+        {% else %}
+            <a href="?page={{num}}" class="btn btn-secondary mx-2">{{ num }}</a>
+        {% endif %}
+    {% endfor %}
+
+    <a href="?page={{page.paginator.num_pages}}" class="btn btn-secondary mx-2">Last</a>
+
+    {% if page.has_next %}
+        <a href="?page={{page.next_page_number}}" class="btn btn-secondary mx-2">Next</a>
+    {% endif %}
+
+{% endblock %}
+
