--- a/uurukg/app/templates/release.html
+++ b/uurukg/app/templates/release.html
@@ -22,4 +22,27 @@
  {% endfor %}
 </div>
 
+
+
+<div class="row text-dark">
+       {% for item in news %}
+     <a href="/post/{{item.id}}">
+      <div class="col-md-4">
+          <div class="card-deck">
+        <div class="card">
+              <img src="{{ item.image.url }}" class="card-img-top" alt="...">
+          <a href="#">{{ item.category.title }}</a>
+            <div class="card-body">
+                <a href="/post/{{item.id}}"><h5 class="card-title">{{ item.title }}</h5></a>
+                <p class="card-text">{{ item.description }}</p>
+            </div>
+             <div class="card-footer">
+                 <small class="text-muted">{{ item.created_date }}</small>
+            </div>
+        </div>
+    </div>
+      </div></a>
+{% endfor %}
+</div>
+
      {% endblock %}
