--- a/uurukg/app/templates/reporter.html
+++ b/uurukg/app/templates/reporter.html
@@ -22,27 +22,20 @@
 </div>
 
 
-<!--<div class="row text-dark">-->
-<!--       {% for item in news %}-->
-<!--     <a href="/post/{{item.id}}">-->
-<!--      <div class="col-md-2">-->
-<!--          <div class="card-deck">-->
-<!--        <div class="card">-->
-<!--              <img src="{{ item.image.url }}" class="card-img-top" alt="...">-->
-<!--          <a href="">{{ item.category.title }}</a>-->
-<!--            <div class="card-body">-->
-<!--                <h5 class="card-title">{{ с.title }}</h5>-->
-<!--                <p class="card-text">{{ item.description }}</p>-->
-<!--            </div>-->
-<!--             <div class="card-footer">-->
-<!--      <small class="text-muted"><p class="card-text">{{ item.created_date }}</p></small>-->
-<!--    </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--      </div>-->
-<!--     </a>-->
-<!--          {% endfor %}-->
 
-<!--      </div>-->
-
-     {% endblock %}
+     {% if page.has_previous %}
+        <a href="?page={{page.previous_page_number}}" class="btn btn-secondary mx-2">Previous</a>
+    {% endif %}
+    <a href="?page=1" class="btn btn-secondary">First</a>
+    {% for num in news.paginator.page_range %}
+        {% if num == page.number %}
+            <span>{{ num }}</span>
+        {% else %}
+            <a href="?page={{num}}" class="btn btn-secondary mx-2">{{ num }}</a>
+        {% endif %}
+    {% endfor %}
+    <a href="?page={{page.paginator.num_pages}}" class="btn btn-secondary mx-2">Last</a>
+    {% if page.has_next %}
+        <a href="?page={{page.next_page_number}}" class="btn btn-secondary mx-2">Next</a>
+    {% endif %}
+{% endblock %}
