--- a/uurukg/app/templates/base.html
+++ b/uurukg/app/templates/base.html
@@ -27,6 +27,7 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="{%static 'css/style.css' %}" rel="stylesheet">
+    <link href="{%static 'css/button_style.css' %}" rel="stylesheet">
 </head>
 
 <body>
@@ -50,9 +51,12 @@
     <div class="row align-items-center bg-white py-3 px-lg-5">
         <div class="col-lg-4">
             <a href="/" class="navbar-brand p-0 d-none d-lg-block">
-                <h1 class="m-0 display-4 text-uppercase text-primary">УРУУ<span
-                        class="text-secondary font-weight-normal"><small>.net</small></span></h1>
+                <h1 class="m-0 display-4 text-uppercase text-primary">УУРУ<span
+                        class="text-secondary font-weight-normal"><small>.нет</small></span></h1>
             </a>
+        </div>
+        <div class="col-lg-7 text-right m-0">
+            <h5><i style="color: red">Китайцы расстреливают коррупцию, <br>а мы убиваем её информационно.</i></h5>
         </div>
         <div class="col-lg-8 text-center text-lg-right">
             <a href="https://htmlcodex.com"><img class="img-fluid" src="img/ads-728x90.png" alt=""></a>
@@ -93,7 +97,8 @@
 <!--                </div>-->
                 <a href="/korrupcia/all" class="nav-item nav-link">Коррупция</a>
                 <a href="/criminal/all" class="nav-item nav-link">Криминал</a>
-                  <a href="/release/all/" class="nav-item nav-link">Пресс-релизы</a>
+<!--                  <a href="/release/all/" class="nav-item nav-link">Пресс-релизы</a>-->
+                  <a href="/departments/all" class="nav-item nav-link">Пресс-релизы</a>
                  <a href="/analitika/all" class="nav-item nav-link">Аналитика</a>
                 <a href="/reporter/all" class="nav-item nav-link">Осведомители</a>
 
