--- a/uurukg/app/templates/index.html
+++ b/uurukg/app/templates/index.html
@@ -37,10 +37,11 @@
                             <p>Поиск по ФИО:</p>
                             <input type="text" name="name" placeholder="Инициалы..." class="responsive-input"
                                    onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
-                            <p class="mt-5">Поиск по должности:</p>
+                            <p class="mt-3">Поиск по должности:</p>
                             <input type="text" name="position" placeholder="Должность..." class="responsive-input"
                                    onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
-                            <input type="submit" class="mt-0" name="go" id="go" value="Поиск..."/>
+                            <br>
+                            <input type="submit" class="btn mt-4" name="go" id="go" value="Поиск..."/>
                         </fieldset>
                     </form>
                 </div>
@@ -64,7 +65,7 @@
                                          style="object-fit: cover;">
                                     <div class="bg-white border border-top-0 p-4">
                                         <div class="mb-2">
-                                            <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2 "
+                                            <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
                                                href="##">{{ i.category.title }}</a>
                                             <a class="text-body" href="post/{{i.id}}">
                                                 <small>{{ i.created_date }}</small></a>
@@ -110,14 +111,19 @@
                                             <a class="text-body" href="post/{{i.id}}">
                                                 <small>{{ i.created_date }}</small></a>
                                         </div>
-                                           <h5 class="card-title text-truncate">{{ i.title }}</h5>
+                                        <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold text-truncate"
+                                           href="post/{{i.id}}">{{ i.title }}</a>
                                         <p class="m-0">{{ i.description }}</p>
+<!--                                           <h5 class="card-title text-truncate">{{ i.title }}</h5>-->
+<!--                                        <p class="m-0">{{ i.description }}</p>-->
                                     </div>
                                     <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
                                         <div class="d-flex align-items-center">
                                         </div>
                                         <div class="d-flex align-items-center">
-                                            <a href="post/{{i.id}}">Читать поробнее...</a>
+<!--                                            <a href="post/{{i.id}}">Читать поробнее...</a>-->
+                                            <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
+                                               href="post/{{i.id}}">Читать поробнее...</a>
                                         </div>
                                     </div>
                                 </div>
@@ -150,14 +156,20 @@
                                             <a class="text-body" href="post/{{i.id}}">
                                                 <small>{{ i.created_date }}</small></a>
                                         </div>
-                                        <h5 class="card-title text-truncate">{{ i.title }}</h5>
+                                           <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold text-truncate"
+                                           href="post/{{i.id}}">{{ i.title }}</a>
                                         <p class="m-0">{{ i.description }}</p>
+<!--                                        <h5 class="card-title text-truncate">{{ i.title }}</h5>-->
+<!--                                        <p class="m-0">{{ i.description }}</p>-->
                                     </div>
                                     <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
                                         <div class="d-flex align-items-center">
                                         </div>
                                         <div class="d-flex align-items-center">
-                                            <a href="post/{{i.id}}">Читать поробнее...</a>
+<!--                                            <a href="post/{{i.id}}">Читать поробнее...</a>-->
+<!--                                            <a href="post/{{i.id}}">Читать поробнее...</a>-->
+                                             <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
+                                               href="post/{{i.id}}">Читать поробнее...</a>
                                         </div>
                                     </div>
                                 </div>
@@ -192,14 +204,19 @@
                                                 <small>{{ i.created_date }}</small>
 <!--                                            </a>-->
                                         </div>
-                                        <h5 class="card-title text-truncate">{{ i.title }}</h5>
+<!--                                        <h5 class="card-title text-truncate">{{ i.title }}</h5>-->
+<!--                                        <p class="m-0">{{ i.description }}</p>-->
+                                           <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold text-truncate"
+                                           href="post/{{i.id}}">{{ i.title }}</a>
                                         <p class="m-0">{{ i.description }}</p>
                                     </div>
                                     <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
                                         <div class="d-flex align-items-center">
                                         </div>
                                         <div class="d-flex align-items-center">
-                                            <a href="/post/{{i.id}}">Читать поробнее...</a>
+<!--                                            <a href="/post/{{i.id}}">Читать поробнее...</a>-->
+                                            <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
+                                               href="post/{{i.id}}">Читать поробнее...</a>
                                         </div>
                                     </div>
                                 </div>
@@ -235,14 +252,19 @@
                                             <a class="text-body" href="post/{{i.id}}">
                                                 <small>{{ i.created_date }}</small></a>
                                         </div>
-                                         <h5 class="card-title text-truncate">{{ i.title }}</h5>
+<!--                                         <h5 class="card-title text-truncate">{{ i.title }}</h5>-->
+<!--                                        <p class="m-0">{{ i.description }}</p>-->
+                                           <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold text-truncate"
+                                           href="post/{{i.id}}">{{ i.title }}</a>
                                         <p class="m-0">{{ i.description }}</p>
                                     </div>
                                     <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
                                         <div class="d-flex align-items-center">
                                         </div>
                                         <div class="d-flex align-items-center">
-                                            <a href="sng/{{i.id}}">Читать поробнее...</a>
+<!--                                            <a href="sng/{{i.id}}">Читать поробнее...</a>-->
+                                            <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
+                                               href="/sng/{{i.id}}">Читать поробнее...</a>
                                         </div>
                                     </div>
                                 </div>
